[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vasp-ase"
version = "1.0.0"
description = "ASE calculator interface for VASP (Vienna Ab initio Simulation Package)"
readme = "README.org"
license = "GPL-3.0-or-later"
requires-python = ">=3.9"
authors = [
    { name = "John Kitchin", email = "jkitchin@andrew.cmu.edu" }
]
keywords = ["vasp", "ase", "dft", "computational-chemistry", "materials-science"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.20",
    "ase>=3.22",
    "scipy>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]
slurm = []  # No extra deps needed
kubernetes = [
    "kubernetes>=28.0",
]
plotting = [
    "matplotlib>=3.5",
]
all = [
    "vasp-ase[dev,kubernetes,plotting]",
]

[project.urls]
Homepage = "https://github.com/jkitchin/vasp"
Documentation = "https://github.com/jkitchin/vasp#readme"
Repository = "https://github.com/jkitchin/vasp.git"
Issues = "https://github.com/jkitchin/vasp/issues"

[project.scripts]
vasp-status = "vasp.cli:status_command"

[tool.hatch.build.targets.wheel]
packages = ["vasp"]

[tool.pytest.ini_options]
testpaths = ["vasp/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["vasp"]

[tool.coverage.run]
source = ["vasp"]
omit = ["vasp/tests/*"]
