[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vasp-ase"
version = "2.0.0"
description = "Modern ASE calculator interface for VASP with workflow integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "John Kitchin", email = "jkitchin@andrew.cmu.edu" }
]
keywords = [
    "vasp", "ase", "dft", "computational-chemistry", "materials-science",
    "workflow", "automation", "phonons", "machine-learning"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.22",
    "ase>=3.22",
    "scipy>=1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "build>=1.0",
    "twine>=4.0",
]
slurm = []  # No extra deps needed
kubernetes = [
    "kubernetes>=28.0",
]
phonons = [
    "phonopy>=2.20",
]
workflows = [
    # Workflow engines (user chooses one)
    # "prefect>=2.0",
    # "dask>=2023.0",
    # "parsl>=2023.0",
    # "covalent>=0.220",
]
plotting = [
    "matplotlib>=3.5",
]
docs = [
    "jupyter-book>=1.0.0",
    "sphinx>=7.0.0",
    "sphinx-autodoc-typehints>=2.0.0",
    "myst-nb>=1.0.0",
    "sphinxcontrib-bibtex>=2.6.0",
    "sphinx-design>=0.5.0",
]
all = [
    "vasp-ase[dev,kubernetes,phonons,plotting,docs]",
]

[project.urls]
Homepage = "https://github.com/jkitchin/vasp"
Documentation = "https://github.com/jkitchin/vasp#readme"
Repository = "https://github.com/jkitchin/vasp.git"
Issues = "https://github.com/jkitchin/vasp/issues"

[project.scripts]
vasp-claude = "vasp.cli:main"
vasp-status = "vasp.cli:status_command"
vaspsum = "vasp.cli:vaspsum"
vasp-debug = "vasp.cli:vasp_debug"

[tool.hatch.build.targets.wheel]
packages = ["vasp"]

[tool.pytest.ini_options]
testpaths = ["vasp/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
# Mixin pattern uses dynamic attribute access
disable_error_code = ["attr-defined", "union-attr"]

[[tool.mypy.overrides]]
module = "vasp.mixins.*"
disable_error_code = ["attr-defined", "union-attr", "arg-type", "return-value", "assignment", "var-annotated", "index", "operator"]

[[tool.mypy.overrides]]
module = "vasp.recipes.*"
disable_error_code = ["attr-defined", "union-attr", "arg-type", "return-value", "call-arg", "assignment", "operator", "index"]

[tool.ruff]
target-version = "py39"
line-length = 100
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["vasp"]

[tool.coverage.run]
source = ["vasp"]
omit = ["vasp/tests/*"]
